# hust_parallel_2018

./: README.md  README.txt  erosion_pthread  erosion_pthread.cc
bfs/: Makefile  bfs_openmp  bfs_openmp.cc
cuda/: erosion_cuda.cu
doc/: ACM1401_U201414713_李昊洋.docx  ACM1501_U201514582_朱锦辉_并行编程proj.docx  CS1504_U201514590_郑燕丽.docx  Lab实验报告参考模板.docx  ParallelLabs.cpp  Project1_sequencial.cpp  lect12 实验 .ppt  project.txt  ~$M1401_U201414713_李昊洋.docx  ~$M1501_U201514582_朱锦辉_并行编程proj.docx  ~$（2018）Parallel Programming Principle and Practice Lab Guide.pptx  外网访问内网跳板的演示.txt  并行编程原理与实践课程课程Project设计指导书.doc  （2018）Parallel Programming Principle and Practice Lab Guide.pptx
doc/Lab5_CUDA/: Lab5_CUDA.vcxproj  kernel.cu
doc/Lab5_CUDA/x64/Debug/: kernel.cu.cache  kernel.cu1442391042.deps
doc/Lab5_CUDA/x64/Debug/Lab5_CUDA.tlog/: Lab5_CUDA.lastbuildstate  Lab5_CUDA.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
mpi/: CMakeLists.txt  erosion_mpi.cc
openmp/: CMakeLists.txt  erosion_openmp.cc  erosion_openmp_new.cc
pthread/: CMakeLists.txt  erosion_pthread.cc
sudoku/: Makefile  parallel_sudoku  parallel_sudoku.cc
